syntax = "proto3";

package proto.requests;

option java_multiple_files = true;
option java_package = "com.alifsaddid.proto.requests";

message EvenNumberRequest {
    int32 number = 1;
}